--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       gtag('config', 'G-XLRSGZN93F');
     </script>
 
-
     <meta charset="UTF-8">
     
     <title>JW Website</title>
@@ -45,15 +44,15 @@
                 <h1 style=" height: fit-content; margin: 0; word-break: keep-all; width:100vw;">Welcome to my website!! 大家好！！！！</h1>
             </div>
 
-            <div style="display: flex; width: 100%; justify-content: space-between; height: 80%;">
-                <nav style="width: 25%; height: 90%; margin: 3px;  border: 1px solid black; padding: 3px;">
+            <div style="display: flex; width: 100%; justify-content: space-between; height: 60%; margin-bottom: 20px;;">
+                <nav style="width: 25%; height: 100%; margin: 3px;  border: 1px solid black; padding: 3px;">
                     <ul style="padding-left: 20px; font-size: 25px;" class="navbar-ul">
                         <li><a href="/">Home 妈妈我要回家好怕呀~~~</a></li>
                         <li><a href="/pictures.html">More Pictures 很好看的东西</a></li>
                         <li><a href="https://jiamingwang.net">For investors $$$ 快来看看</a></li>
                     </ul>
                 </nav>
-                <div style="width: 37.5%; overflow-y: auto;  height: 90%; margin: 3px; border: 1px solid black; padding: 3px;">
+                <div style="width: 37.5%; overflow-y: auto;  height: 100%; margin: 3px; border: 1px solid black; padding: 3px;">
                     <h2 style="display: block; margin: 2px">
                         <img src="/resources/about.gif" alt="About" style="display: block; margin-left: auto; margin-right: auto;">
                     </h2>
@@ -85,7 +84,7 @@
                     <img src="/resources/IMG01244.jpg" alt="swag" width="300" style="display: block; margin-left: auto; margin-right: auto;">    
                 </div>
 
-                <div style="width: 37.5%; overflow-y: auto; height: 90%; margin: 3px;  border: 1px solid black; padding: 3px;" class="gallery">
+                <div style="width: 37.5%; overflow-y: auto; height: 100%; margin: 3px;  border: 1px solid black; padding: 3px;" class="gallery">
                     <h2 style="display: block;;">
                         <img src="/resources/gallery.png" alt="Gallery">
                     </h2>
@@ -106,6 +105,17 @@
                     
                     <img src="/resources/joeyy.gif" alt="joeyy" width="200">
                     <p class="caption"><i>fat fuck</i></p>
+                </div>
+            </div>
+
+            <div  style="height: 18%; width:100%; border: 1px solid black; padding: 5px; display: flex; align-items: center; justify-content: space-between;">
+                <div id="comments" style="width: 70%; overflow-y: auto; height: 95%; padding-left: 10px;">
+
+                </div>
+                <div style="width: 30%; height: 95%; padding: 5px;">
+                    <input type="text" placeholder="name" style="display: block;" id="msg-name"/>
+                    <textarea placeholder="message" style="width: 90%; height: 60%; resize: none; display: block;" id="msg-msg"></textarea>
+                    <button style="display: block;" onclick="sendMessage()">Submit</button>
                 </div>
             </div>
         </div>
@@ -153,5 +163,7 @@
             }, 50)
         }
     </script>
+
+    <script src="comments.mjs" type="module"></script>
 </body>
 </html>
