fix and loading gif

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div  style="height: 18%; width:100%; border: 1px solid black; padding: 5px; display: flex; align-items: center; justify-content: space-between;">
                 <div id="comments" style="width: 70%; overflow-y: auto; height: 95%; padding-left: 10px;">
-
+                    <img src="resources/loading.gif" alt="loading" width="100" />
                 </div>
                 <div style="width: 30%; height: 95%; padding: 5px;">
                     <input type="text" placeholder="name" style="display: block;" id="msg-name"/>
@@ -164,6 +164,6 @@
         }
     </script>
 
-    <script src="comments.mjs" type="module"></script>
+    <script src="comments.js" type="module"></script>
 </body>
 </html>
