more style changes

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 width: 100vw;
                             "
                         >
-                            Welcome to my website!! 大家好！！！！
+                            <span style="background-color: black;">Welcome to my website!! 大家好！！！！</span>
                         </h1>
                     </div>
                 </div>
@@ -290,9 +290,10 @@
                                 margin-top: 10px;
                                 background-image: url(/resources/gallery/forest.jpg);
                                 background-position: 0px -300px;
+                                
                             "
                         >
-                            About Me
+                            <span style="background-color: black; transform: rotateZ(3deg); display: block; width: fit-content;">About Me.</span>
                         </h3>
                         <ul>
                             <li>
