--- a/pictures.html
+++ b/pictures.html
@@ -201,15 +201,21 @@
             <p>australian rocks</p>
             <p class="image-date"></p>
         </div>
+
+        <div class="image-block" style="bottom: 4vh; left: 50vw;">
+            <img src="resources/gallery/memorial.jpg" alt="memorial" width="260">
+            <p>memorial for someone</p>
+            <p class="image-date"></p>
+        </div>
     </div>
 
     <a style="position: fixed; bottom: 30px; left: 20px;" href="/">< home 回家</a>
 
-    <button style="position: fixed; bottom: 30px; right:90px; padding: 10px;" onclick="prevPage()" id="prevBtn">prev 上</button>
-    <button style="position: fixed; bottom: 30px; right:20px; padding: 10px;" onclick="nextPage()" id="nextBtn">next 下</button>
+    <button style="position: fixed; bottom: 30px; right:90px; padding: 10px;" onclick="prevPage()" id="prevBtn">Prev 上</button>
+    <button style="position: fixed; bottom: 30px; right:20px; padding: 10px;" onclick="nextPage()" id="nextBtn">Next 下</button>
 
     <div class="audioplayer">
-        <button onclick="playpause(this)" id="playpause" style="position: relative; bottom: 2px; padding-bottom: 3px; height:25px">⏸︎</button>
+        <button onclick="playpause(this)" id="playpause" style="padding-bottom: 3px; height:25px"><span>⏸︎</span></button>
 
         <div class="marquee" style="display: inline-block; width: 200px;margin:0; padding:0; overflow: hidden;">
             <p id="data" style="margin:0; padding:0; overflow: hidden; width:1000px;"></p>
@@ -218,6 +224,10 @@
         <input type="range" min="0" max="100" value="0" id="progress" style="margin:0; width:40%;" onclick="userSetProgress(this)">
 
         <div style="display: inline-block; width: fit-content;margin:0; padding:0; overflow: hidden;">
+            <p id="songprog" style="margin:0; padding:0; font-size: small; position:relative; bottom: 2px;"></p>
+        </div>
+
+        <div style="display: inline-block; width: fit-content;margin:0; padding:0; overflow: hidden; margin-left: 10px;">
             <p id="listprog" style="margin:0; padding:0;"></p>
         </div>
     </div>
